--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -6,7 +6,7 @@
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
         <span id="welcomeHeader">BIENVENUE DANS YASSICORP MINECRAFT</span>
-        <span id="welcomeDescription">Notre mission est de créer un mode de jeu, sur le jeu cubique Minecraft, imaginé, géré et créé par <a style="color:Tomato;" href="https://yassicarrd.yassicorp.eu/">YassiGame</a>. StealLife est un serveur modée, dessus vous pourrez créer votre ville, votre vie et bien plus ! Dès votre mort, 1 cœur vous sera enlevé ! Une fois les 0 cœur atteint, vous serez tp dans un jump pour tenter de regagner des cœurs. Bon jeu ! <a style="color:Tomato;" href="https://github.com/dscalzi/HeliosLauncher">(Merci a dscalzi pour sa template HeliosLauncher)</a></span>
+        <span id="welcomeDescription">YassiCorp est un network privée et sécurisé, des serveurs et des minis-jeux programmés et proposés seulement pour les joueurs choisis, imaginé, géré et créé par <a style="color:Tomato;" href="https://yassicarrd.yassicorp.eu/">YassiGame</a>. Il vous shouite le bienvenue et merci de votre venu a la YassiCorp. Bon jeu ! <a style="color:Tomato;" href="https://github.com/dscalzi/HeliosLauncher">(Merci a dscalzi pour sa template HeliosLauncher)</a></span>
         <br>
         <span id="welcomeDescCTA">Vous n'êtes qu'à quelques clics de YassiCorp MC.</span>
         <button id="welcomeButton">
